# diamonds

./: .env copy  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
api/: api.py  main.py  variable_model.py
api/static/: styles.css
api/templates/: index.html
notebooks/: Exploration.ipynb  Testnotebook.ipynb  sandbank.ipynb
src/diamonds/: __init__.py  data.py  model.py  params.py  predict.py  registry.py  train.py
tests/: locust.py
