[project]
name = "diamonds"
version = "0.1.0"
description = "Preprocess & Train a model to predict diamond price"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "Loguru (>=0.7.3,<0.8.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{ include = "diamonds", from = "src" }]

[tool.poetry.group.dev.dependencies]
notebook = "^7.5.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
